//Copyright 2019-2023 VMware, Inc.
//SPDX-License-Identifier: EPL-2.0

buildscript {
    ext {
     springBootVersion = '3.1.1'
    }
    repositories {
        mavenLocal()
        maven { url "https://repo1.maven.org/maven2/" }
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
        classpath("org.asciidoctor:asciidoctor-gradle-plugin:1.5.7")
        classpath("io.github.swagger2markup:swagger2markup-gradle-plugin:1.3.3")
        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1")
    }
}


allprojects{
    version = project.getProperty('buildNumber')
    
    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    apply plugin: "org.sonarqube"
    apply plugin: "jacoco"

    
    group = 'com.vmware'
    sourceCompatibility = '17'


    repositories {
        mavenLocal() 
        maven { url "https://repo1.maven.org/maven2/" }
        mavenCentral()
        jcenter()
       
       
    }
     
   
     
}

subprojects{



    ext {
   	       
        projectVersion = '0.0.1-SNAPSHOT'
        httpclient='4.5.13'
        jacksonVersion = '2.15.2'
        springdocVersion='2.1.0'

    	ehCacheVersion = '3.10.8'
    	cacheApiVersion='1.1.1'
    	hsqlVersion = '2.3.3'
    	junitVersion = '4.13.2'
    	jsonSimpleVersion = '1.1.1'
    	commonsCollectionsVersion = '3.2.2'
    	commonsLangVersion = '3.12.0'
    	commonsIoVersion = '2.11.0'
    	commonsCodecVersion='1.15'
    	
    	guavaVersion="30.1.1-jre"
    	snakeyam="2.0"
    	jjwtVersion="0.9.1"
    	hibernateJpa21Api = "1.0.2.Final"
    	log4j2Version="2.18.0"
    	slf4jVersion="1.7.32"
    	esapiVersion="2.5.1.0"
       
    	postgresqlVersion = "42.1.4"
    	druidVersion = "1.1.8"
    	awsS3Version = "1.12.497"
        swaggerVersion = "3.0.0"
        icu4jVersion = "60.3"
        
    	buildRelease = 'beta'
    	remoteServer = ""
    	deployPath="$rootDir/../publish/"
    }
    
   tasks.withType(JavaCompile) {
       options.encoding = "UTF-8"
    }
    

}
